--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "grunt-contrib-cssmin": "~2.2",
     "grunt-contrib-jasmine": "^2.2.0",
     "grunt-contrib-uglify": "4.0.1",
-    "grunt-contrib-uglify-es": "git://github.com/gruntjs/grunt-contrib-uglify.git#harmony",
+    "grunt-contrib-uglify-es": "https://github.com/gruntjs/grunt-contrib-uglify.git#harmony",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-gh-pages": "^4.0.0",
     "grunt-postcss": "^0.9.0",
@@ -39,7 +39,7 @@
     "grunt-zip": "~0.17.1",
     "grunt1.0-dom-munger": "~3.4",
     "load-grunt-tasks": "^3.5.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0",
     "simulant": "^0.2.2"
   },
   "contributors": [
