--- a/docs/composer.json
+++ b/docs/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "ItsTino/chosen",
+  "name": "jjj/chosen",
   "description": "Chosen is a JavaScript plugin that makes select boxes user-friendly. It is currently available in both jQuery and Prototype flavors.",
   "authors": [
     {
       "name": "John James Jacoby",
-      "homepage": "https://github.com/ItsTino"
+      "homepage": "https://github.com/jjj"
     },
     {
       "name": "Patrick Filler",
@@ -34,7 +34,7 @@
   "type": "npm-asset",
   "license": "MIT",
   "minimum-stability": "stable",
-  "homepage": "https://ItsTino.github.io/chosen/",
+  "homepage": "https://jjj.github.io/chosen/",
   "require": {
   }
 }
