--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: chosen-build
-        path: /docs/ # Replace with the path to your build output
+        path: ./docs/ # Replace with the path to your build output
         if-no-files-found: warn # Options: "warn", "error", "ignore"
         retention-days: 10 # Adjust as needed
         compression-level: 6 # Optional, default is 6
