--- a/.github/workflows/npm-grunt-test.yml
+++ b/.github/workflows/npm-grunt-test.yml
@@ -1,4 +1,4 @@
-name: NodeJS with Grunt
+name: Grunt Test
 
 on:
   push:
@@ -22,8 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Build
+    - name: Test
       run: |
         npm install
         grunt test
-        grunt build
