--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,9 @@ on:
   push:
     branches:
       - master
-    tags:
-      - 'v*'
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,15 +21,17 @@ jobs:
       run: npm install
 
     - name: Build Project
-      run: grunt build # Replace with your build command
+      run: grunt build
 
     - name: Create a Release
-      if: startsWith(github.ref, 'refs/tags/v')
-      uses: elgohr/Github-Release-Action@v5
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        title: MyReleaseMessage
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
+        draft: false
+        prerelease: false
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
