--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '12' # Use Node.js version 12
+        node-version: '12'
 
     - name: Install Dependencies
       run: npm install
@@ -24,21 +24,22 @@ jobs:
       run: grunt build
 
     - name: Create a Release
+      id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
+        tag_name: commit-${{ github.sha }}
+        release_name: Release commit-${{ github.sha }}
         draft: false
         prerelease: false
 
-    - name: Upload Build Artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: chosen-build
-        path: ./docs/ # Replace with the path to your build output
-        if-no-files-found: warn # Options: "warn", "error", "ignore"
-        retention-days: 10 # Adjust as needed
-        compression-level: 6 # Optional, default is 6
-        overwrite: true # Optional, default is false
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./docs/
+        asset_name: chosen-build-${{ github.sha }}.zip
+        asset_content_type: application/zip
