--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Build Project
       run: grunt build
 
+    - name: Zip Build Artifacts
+      run: zip -r chosen-build-${{ github.sha }}.zip ./docs/
+
     - name: Create a Release
       id: create_release
       uses: actions/create-release@v1
@@ -40,6 +43,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./docs/
+        asset_path: ./chosen-build-${{ github.sha }}.zip
         asset_name: chosen-build-${{ github.sha }}.zip
         asset_content_type: application/zip
