--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
       run: grunt build
 
     - name: Zip Build Artifacts
-      run: zip -r chosen-build-$GITHUB_REF_NAME.zip ./docs/
+      run: zip -r chosen-build-${{  github.ref_name }}".zip ./docs/
 
     - name: Create a Release
       id: create_release
@@ -35,8 +35,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: $GITHUB_REF_NAME
-        release_name: Release $GITHUB_REF_NAME
+        tag_name: ${{  github.ref_name }}"
+        release_name: Release ${{  github.ref_name }}"
         draft: false
         prerelease: false
 
@@ -46,6 +46,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./chosen-build-$GITHUB_REF_NAME.zip
-        asset_name: chosen-build-$GITHUB_REF_NAME.zip
+        asset_path: ./chosen-build-${{  github.ref_name }}".zip
+        asset_name: chosen-build-${{  github.ref_name }}".zip
         asset_content_type: application/zip
