--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
-        node-version: '12'
+        node-version: 20
 
     - name: Install Dependencies
       run: npm install
@@ -30,22 +30,11 @@ jobs:
       run: zip -r chosen-build-${{  github.ref_name }}".zip ./docs/
 
     - name: Create a Release
-      id: create_release
-      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{  github.ref_name }}"
-        release_name: Release ${{  github.ref_name }}"
-        draft: false
-        prerelease: false
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./chosen-build-${{  github.ref_name }}".zip
-        asset_name: chosen-build-${{  github.ref_name }}".zip
-        asset_content_type: application/zip
+        tag: ${{ github.ref_name }}
+      run: |
+        gh release create "$tag" chosen-build-${{  github.ref_name }}".zip \
+          --repo="$GITHUB_REPOSITORY" \
+          --title="${GITHUB_REPOSITORY#*/} ${tag#v}" \
+          --generate-notes
